src/objects/Competitor__c.object
<CustomObject>
    <description>This object is used to link Competitors (Which are ACCOUNTS!) with the correct accounts, to determine which competitors are connected to which customers and prospects.

Designed as a simple M:M relationship object</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The related Account to which the Competitor is connected</description>
        <inlineHelpText>The related Account to which the Competitor is connected</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Applicable_SBUs__c</fullName>
        <description>Defines for which SBUs this Competitor is valid. One or many SBUs can be chosen</description>
        <inlineHelpText>Defines for which SBUs this Competitor is valid. One or many SBUs can be chosen</inlineHelpText>
        <label>Applicable SBUs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Instruments</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Treatment Centers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Competitor to which the Account is connected</description>
        <inlineHelpText>State the Competitor that we have on this Account here!</inlineHelpText>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <infoMessage>Add the Competitor here</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors (Competitor)</relationshipLabel>
        <relationshipName>Competitors1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>